--- a/scripts/test1.ipynb
+++ b/scripts/test1.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Test 1\n",
     "\n",
-    "Creating a 2D playground"
+    "Creating a 2D playground\n",
+    "\n",
+    "This approach will not work. Too much trouble to compute gradients after integration.\\\n",
+    "Make everything numerically."
    ]
   },
   {
